[[bin]]
name = "autobahn-client"
path = "src/bin/autobahn-client.rs"
required-features = ["autobahn-client"]

[[bin]]
name = "autobahn-client-concurrent"
path = "src/bin/autobahn-client-concurrent.rs"
required-features = ["autobahn-client-concurrent"]

[[bin]]
name = "autobahn-server"
path = "src/bin/autobahn-server.rs"
required-features = ["autobahn-server"]

[[bin]]
name = "boringssl"
path = "src/bin/boringssl.rs"
required-features = ["boringssl"]

[[bin]]
name = "boringssl-config"
path = "src/bin/boringssl-config.rs"
required-features = ["boringssl-config"]

[[bin]]
name = "ccadb"
path = "src/bin/ccadb.rs"
required-features = ["ccadb"]

[[bin]]
name = "h2load"
path = "src/bin/h2load.rs"
required-features = ["h2load"]

[[bin]]
name = "h2spec-high"
path = "src/bin/h2spec-high.rs"
required-features = ["h2spec-high"]

[[bin]]
name = "h2spec-low"
path = "src/bin/h2spec-low.rs"
required-features = ["h2spec-low"]

[[bin]]
name = "testssl"
path = "src/bin/testssl.rs"
required-features = ["testssl"]

[[bin]]
name = "x509-limbo"
path = "src/bin/x509-limbo.rs"
required-features = ["x509-limbo"]

[dependencies]
serde = { default-features = false, optional = true, version = "1.0" }
serde_json = { default-features = false, features = ["alloc"], optional = true, version = "1.0" }
tokio = { default-features = false, features = ["macros", "net", "rt-multi-thread"], optional = true, version = "1.0" }
wtx = { default-features = false, features = ["nightly", "optimizations-std"], path = "../wtx" }

[features]
autobahn-client = ["tokio", "wtx/tokio", "wtx/web-socket", "wtx/zlib-rs"]
autobahn-client-concurrent = ["tokio",  "wtx/tokio", "wtx/web-socket", "wtx/zlib-rs"]
autobahn-server = ["tokio", "wtx/tokio", "wtx/web-socket-server-framework", "wtx/zlib-rs"]
boringssl = ["tokio", "wtx/tokio", "wtx/_tracing-tree", "wtx/x509"]
boringssl-config = ["serde/derive", "serde_json/std", "wtx/hashbrown", "wtx/serde"]
ccadb = ["tokio", "wtx/ccadb", "wtx/hashbrown", "wtx/http2-client-pool", "wtx/http2", "wtx/tokio"]
h2load = ["tokio", "wtx/http2-server-framework", "wtx/nightly", "wtx/tokio"]
h2spec-high = ["tokio", "wtx/http2", "wtx/tokio"]
h2spec-low = ["tokio", "wtx/http2", "wtx/tokio"]
testssl = ["tokio", "wtx/http2-server-framework", "wtx/nightly", "wtx/tokio"]
x509-limbo = ["wtx/serde", "serde/derive", "serde_json/std", "wtx/x509"]

[package]
edition = "2024"
name = "wtx-internal"
publish = false
rust-version = "1.96"
version = "0.0.0"
