[dependencies]
serde = { default-features = false, features = ["alloc", "derive"], optional = true, version = "1.0" }
tokio = { default-features = false, features = ["macros", "net", "rt-multi-thread"], version = "1.0" }
ui_test = { default-features = false, features = ["rustc"], version = "0.30" }
wtx = { default-features = false, features = ["client-api-framework", "executor", "http", "http-client-pool", "macros", "postgres", "schema-manager-dev", "serde_json", "tokio", "web-socket-handshake"], path = "../wtx" }

[package]
edition = "2024"
name = "wtx-macros-tests"
publish = false
rust-version = "1.89"
version = "0.0.0"

[workspace]