[dependencies]
proc-macro2 = { default-features = false, version = "1.0" }
quote = { default-features = false, features = ["proc-macro"], version = "1.0" }
syn = { default-features = false, features = ["full", "parsing", "printing", "extra-traits", "proc-macro"], version = "2.0" }

[dev-dependencies]
trybuild = { default-features = false, version = "1.0" }
wtx = { default-features = false, features = ["client-api-framework"], path = "../wtx" }

[features]
default = []

[lib]
proc-macro = true

[package]
categories = ["asynchronous", "data-structures", "network-programming"]
description = "Procedural macros for wtx"
edition = "2021"
keywords = ["api", "client", "io", "network"]
license = "MIT"
name = "wtx-macros"
readme = "README.md"
repository = "https://github.com/c410-f3r/wtx"
version = "0.1.0"

[package.metadata.docs.rs]
all-features = true
