[dependencies]
proc-macro2 = { default-features = false, version = "1.0" }
quote = { default-features = false, features = ["proc-macro"], version = "1.0" }
syn = { default-features = false, features = ["derive", "extra-traits", "full", "parsing", "printing", "proc-macro"], version = "2.0" }

[lib]
proc-macro = true

[package]
categories = ["asynchronous", "data-structures", "network-programming"]
description = "Procedural macros for wtx"
edition = "2024"
exclude = ["tests"]
keywords = ["api", "client", "io", "network"]
license = "MPL-2.0"
name = "wtx-macros"
readme = "README.md"
repository = "https://github.com/c410-f3r/wtx"
rust-version = "1.89"
version = "0.5.0"

[package.metadata.docs.rs]
all-features = true
