[dependencies]
clap = { default-features = false, features = ["derive", "help", "std", "usage"], optional = true, version = "4.0" }
dotenvy = { default-features = false, optional = true, version = "0.15" }
tokio = { default-features = false, features = ["io-std", "io-util", "macros", "net", "rt-multi-thread"], version = "1.0" }
wtx = { default-features = false, features = ["tokio"], path = "../wtx", version = "0.39.0" }

[features]
default = []
embed-migrations = ["clap", "tokio/fs", "wtx/schema-manager", "wtx/std"]
http-client = ["clap", "wtx/http-client-pool", "wtx/tokio-rustls", "wtx/_tracing-tree", "wtx/webpki-roots"]
schema-manager = ["clap", "wtx/getrandom", "wtx/postgres", "wtx/schema-manager", "wtx/std"]
schema-manager-dev = ["dotenvy", "schema-manager", "wtx/_tracing-tree", "wtx/schema-manager-dev"]
unified = []
web-socket = ["clap", "wtx/web-socket-handshake"]

_curl = []

[package]
authors = ["Caio Fernandes <c410.f3r@gmail.com>"]
categories = ["asynchronous", "command-line-interface", "gui"]
description = "Different user interfaces for WTX"
documentation = "https://docs.rs/wtx-ui"
edition = "2024"
keywords = ["io", "network", "websocket"]
license = "MPL-2.0"
name = "wtx-ui"
readme = "README.md"
repository = "https://github.com/c410-f3r/wtx"
rust-version = "1.89"
version = "0.2.0"

[package.metadata.docs.rs]
all-features = true
