[dependencies]
clap = { default-features = false, features = ["derive", "help", "std", "usage"], optional = true, version = "4.0" }
tokio = { default-features = false, features = ["io-std", "io-util", "macros", "net", "rt-multi-thread"], version = "1.0" }
wtx = { default-features = false, features = ["ccadb", "crypto-ring", "nightly", "tokio"], path = "../wtx", version = "0.48.1" }

[features]
default = []
embed-migrations = ["clap", "tokio/fs", "wtx/schema-manager", "wtx/std"]
http-client = ["clap", "wtx/ccadb", "wtx/http2-client-pool", "wtx/_tracing-tree"]
schema-manager = ["clap", "wtx/postgres", "wtx/schema-manager", "wtx/std"]
schema-manager-dev = ["schema-manager", "wtx/_tracing-tree", "wtx/schema-manager-dev"]
unified = []
web-socket = ["clap", "wtx/web-socket"]

_curl = []

[package]
authors = ["Caio Fernandes <c410.f3r@gmail.com>"]
categories = ["asynchronous", "command-line-interface", "gui"]
description = "Different user interfaces for WTX"
documentation = "https://docs.rs/wtx-ui"
edition = "2024"
keywords = ["io", "network", "websocket"]
license = "MPL-2.0"
name = "wtx-ui"
readme = "README.md"
repository = "https://github.com/c410-f3r/wtx"
rust-version = "1.96"
version = "0.6.1"

[package.metadata.docs.rs]
all-features = true
