[dependencies]
arbitrary = { default-features = false, optional = true, version = "1.0" }
aws-lc-rs = { default-features = false, optional = true, version = "1.0" }
crossbeam-channel = { default-features = false, optional = true, version = "0.5" }
embassy-net = { default-features = false, optional = true, version = "0.9" }
embassy-time = { default-features = false, optional = true, version = "0.5" }
foldhash = { default-features = false, optional = true, version = "0.2" }
graviola = { default-features = false, optional = true, version = "0.4" }
hashbrown = { default-features = false, optional = true, version = "0.17" }
httparse = { default-features = false, optional = true, version = "1.0" }
libc = { default-features = false, optional = true, version = "0.2" }
matchit = { default-features = false, optional = true, version = "0.9" }
memchr = { default-features = false, optional = true, version = "2.0" }
openssl = { default-features = false, optional = true, version = "0.10" }
parking_lot = { default-features = false, optional = true, version = "0.12" }
pin-project-lite = { default-features = false, optional = true, version = "0.2" }
portable-atomic = { default-features = false, optional = true, version = "1.0" }
portable-atomic-util = { default-features = false, optional = true, version = "0.2" }
quick-protobuf = { default-features = false, optional = true, version = "0.8" }
ring = { default-features = false, optional = true, version = "0.17" }
rust_decimal = { default-features = false, optional = true, version = "1.0" }
serde = { default-features = false, optional = true, version = "1.0" }
serde_json = { default-features = false, optional = true, version = "1.0" }
simdutf8 = { default-features = false, optional = true, version = "0.1" }
socket2 = { default-features = false, optional = true, version = "0.6" }
tokio = { default-features = false, optional = true, version = "1.0" }
tracing = { default-features = false, optional = true, version = "0.1" }
tracing-subscriber = { default-features = false, optional = true, version = "0.3" }
tracing-tree = { default-features = false, optional = true, version = "0.4" }
uuid = { default-features = false, optional = true, version = "1.0" }
wtx-macros = { default-features = false, optional = true, path = "../wtx-macros", version = "0.9.0" }
zlib-rs = { default-features = false, optional = true, version = "0.6" }

argon2 = { default-features = false, optional = true, version = "0.6.0-rc.8" }
getrandom = { default-features = false, optional = true, version = "0.4" }
rand_core = { default-features = false, optional = true, version = "0.10" }
sha3 = { default-features = false, optional = true, version = "0.12" }

[dev-dependencies]
wtx = { default-features = false, features = ["crypto-ring", "macros", "nightly", "std"], path = "." }

[features]
32-tuple-impls = []
arbitrary = ["dep:arbitrary", "arbitrary?/derive_arbitrary", "std"]
argon2 = ["dep:argon2"]
asn1 = []
ccadb = ["x509"]
client-api-framework = []
crossbeam-channel = ["dep:crossbeam-channel", "crossbeam-channel?/std", "std"]
crypto = []
crypto-aws-lc-rs = ["dep:aws-lc-rs", "crypto"]
crypto-fips = []
crypto-graviola = ["crypto", "dep:graviola", "std"]
crypto-openssl = ["crypto", "dep:openssl"]
crypto-ring = ["crypto", "dep:ring", "ring?/alloc"]
database = []
database-tests = ["getrandom", "macros", "postgres", "schema-manager-dev"]
default = []
embassy-net = ["dep:embassy-net", "embassy-net?/tcp"]
embassy-time = ["dep:embassy-time"]
error-loc = []
executor = ["std"]
foldhash = ["dep:foldhash", "hashbrown?/default-hasher"]
getrandom = ["dep:getrandom"]
grpc = []
grpc-client = ["grpc", "http2-client-pool"]
grpc-server = ["grpc", "http2-server-framework"]
hashbrown = ["dep:hashbrown", "hashbrown?/default-hasher", "hashbrown?/inline-more"]
http = []
http2-client-pool = ["http2", "nightly", "std"]
http-cookie = ["http"]
http-cookie-secure = ["crypto", "http-cookie"]
http2-server-framework = ["http2", "nightly"]
http-session = ["http-cookie-secure", "secret", "serde_json"]
http2 = ["foldhash", "hashbrown", "http", "tls"]
httparse = ["dep:httparse"]
libc = ["dep:libc"]
macros = ["dep:wtx-macros"]
memchr = ["dep:memchr"]
nightly = []
optimizations = ["memchr", "simdutf8"]
optimizations-std = ["optimizations", "socket2", "std"]
parking_lot = ["dep:parking_lot"]
pin-project-lite = ["dep:pin-project-lite"]
portable-atomic = ["dep:portable-atomic", "portable-atomic?/fallback"]
portable-atomic-util = ["portable-atomic", "dep:portable-atomic-util", "portable-atomic-util/alloc"]
postgres = ["crypto", "database", "foldhash", "hashbrown", "tls"]
postgres-pool = ["postgres", "secret"]
quick-protobuf = ["dep:quick-protobuf", "quick-protobuf?/std", "std"]
rand_core = ["dep:rand_core"]
rust_decimal = ["dep:rust_decimal", "rust_decimal?/maths"]
schema-manager = ["database"]
schema-manager-dev = ["schema-manager"]
secret = ["crypto", "libc"]
serde = ["hashbrown?/serde", "dep:serde", "serde?/alloc", "serde?/derive"]
serde_json = ["serde", "dep:serde_json", "serde_json?/alloc", "serde_json?/std", "std"]
sha3 = ["dep:sha3"]
simdutf8 = ["dep:simdutf8"]
socket2 = ["dep:socket2", "socket2?/all", "std"]
std = ["foldhash?/std", "httparse?/std", "memchr?/std", "ring?/std", "simdutf8?/std", "wtx-macros?/std", "zlib-rs?/std"]
tls = ["x509"]
tokio = ["pin-project-lite", "dep:tokio", "tokio?/io-util", "tokio?/net", "tokio?/rt", "std", "tokio?/sync", "tokio?/time"]
tracing = ["dep:tracing", "tracing?/attributes"]
tracing-subscriber = ["dep:tracing-subscriber", "tracing-subscriber?/env-filter", "tracing-subscriber?/fmt"]
tracing-tree = ["std", "dep:tracing-tree"]
uuid = ["dep:uuid"]
web-socket = ["crypto", "http", "httparse", "tls"]
web-socket-server-framework = ["nightly", "web-socket"]
wtx-macros = ["dep:wtx-macros"]
x509 = ["asn1", "crypto", "hashbrown"]
zlib-rs = ["dep:zlib-rs", "zlib-rs?/rust-allocator"]

_bench = []
_hack = ["aws-lc-rs?/aws-lc-sys", "embassy-net?/medium-ip", "embassy-net?/proto-ipv4", "embassy-time?/generic-queue-64", "embassy-time?/std"] # Does not decide for downstream users
_integration-tests = ["ccadb", "serde_json?/raw_value"]
_tracing-tree = ["tracing", "tracing-subscriber", "tracing-tree"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }

[package]
authors = ["Caio Fernandes <c410.f3r@gmail.com>"]
categories = ["asynchronous", "database", "network-programming", "no-std", "web-programming"]
description = "A collection of different transport implementations and related tools focused primarily on web technologies."
documentation = "https://docs.rs/wtx"
edition = "2024"
homepage = "https://c410-f3r.github.io/wtx"
keywords = ["api", "database", "http", "tls", "websocket"]
license = "MPL-2.0"
name = "wtx"
readme = "README.md"
repository = "https://github.com/c410-f3r/wtx"
rust-version = "1.96"
version = "0.48.0"

[package.metadata.docs.rs]
all-features = true
